<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding" >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/url" >
            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialogPadding">
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/logo_full"
        android:layout_height="@dimen/logo_full"
        card_view:elevation="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_full"
            android:layout_height="@dimen/logo_full"
            android:background="@color/colorAccent"
            android:scaleType="center" />


        <TextView
            android:id="@+id/texte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_logo"
            android:visibility="visible"
            android:textAlignment="center"
            android:paddingTop="15dp" />

    </android.support.v7.widget.CardView>


</LinearLayout>